<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美食菌yummy</string>
    <string name="addressthis">当前地址</string>
    <string name="outapp">再次点击退出</string>
    <string name="city_seach">成都</string>
    <string name="seach">搜索</string>
    <string name="class_capacitysort">智能排序</string>
    <string name="class_city">区域</string>
    <string name="class_bustype">类别</string>
    <string name="tesecai">特色菜</string>
    <string name="httperro">网络不太美丽</string>
    <string name="sharetv">分享</string>
    <string name="taocancontext">套餐内容</string>
    <string name="taocan_tianping">[ 甜品 ]</string>
    <string name="taocan_drink">[ 饮料 ]</string>
    <string name="use_msg">用户须知</string>
    <string name="shanjia">商家</string>
    <string name="pointforsj">给商家打分</string>
    <string name="intput_comment">写下你对商家的评价</string>
    <string name="guomai">购买</string>
    <string name="monetuangou">更多团购</string>
    <string name="seld">已售</string>
    <string name="other_tuanguo">其它团购</string>
    <string name="seldbymonth">月售</string>
    <string name="startseld">起送</string>
    <string name="emsmoney">配送费</string>
    <string name="shangping">商品</string>
    <string name="comment">评价</string>
    <string name="tijiao">提交</string>
    <string name="xiangqing">详情</string>
    <string name="waishong">外送</string>
    <string name="ziqu">自取</string>
    <string name="jieshuan">结算</string>
    <string name="noems">免运费</string>
    <string name="good">点赞</string>
    <string name="daohang1">团购</string>
    <string name="daohang2">外卖</string>
    <string name="daohang3">点餐</string>
    <string name="daohang4">我的</string>
    <string name="goodcomment">好评</string>
    <string name="midlecomment">中评</string>
    <string name="badcomment">差评</string>
    <string name="piccomment">图片</string>
    <string name="dangping">单品</string>
    <string name="taocan">套餐</string>
    <string name="first_cai">头道菜</string>
    <string name="second_cai">第二道菜</string>
    <string name="third_cai">第三道菜</string>
    <string name="jubao_shangjia">举报商家</string>
    <string name="logo">登录</string>
    <string name="zhuche">注册</string>
    <string name="my_order">我的订单</string>
    <string name="waimai_order">外卖订单</string>
    <string name="see_allorder">查看全部订单</string>
    <string name="will_use">待使用</string>
    <string name="will_pay">待付款</string>
    <string name="making">配制中</string>
    <string name="will_comment">待评价</string>
    <string name="complete">已完成</string>
    <string name="my_shouchang">我的收藏</string>
    <string name="my_address">我的地址</string>
    <string name="kefu_zhongxin">客户中心</string>
    <string name="about_ours">关于我们</string>
    <string name="email_tip">本次你生成的验证码为：</string>
    <string name="email_title">微指间验证</string>
    <string name="order_id">订单号</string>
    <string name="creat_data">下单时间</string>
    <string name="country_symbol">CN</string>
    <string name="open_data">营业时间</string>
    <string name="last_data">有效期至</string>
    <string name="count">数量</string>
    <string name="all_privce">总价</string>
    <string name="pay">支付</string>
    <string name="to_pay">去支付</string>
    <string name="order_state">订单状态</string>
    <string name="to_use">去使用</string>
    <string name="to_comment">去评论</string>
    <string name="use_state">订单状态：已使用</string>
    <string name="single_price">人均</string>
    <string name="updata">编辑</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="addaddress">添加收货地址</string>
    <string name="add">添加</string>
    <string name="addressee">收件人</string>
    <string name="input_addressee">收件人姓名</string>
    <string name="phone">联系电话</string>
    <string name="input_phone">填写手机号码</string>
    <string name="location">所在地区</string>
    <string name="choose_shencity">选择省市区</string>
    <string name="address">详细地址</string>
    <string name="input_address">填写详细地址</string>
    <string name="isdefult_address">设为默认地址</string>
    <string name="choose_address">选择收货地址</string>
    <string name="pay_choose">支付方式</string>
    <string name="pay1">paypal支付</string>
    <string name="pay2">银行卡支付</string>
    <string name="pay3">贷到付款</string>
    <string name="sure">确定</string>
    <string name="username">帐号</string>
    <string name="password">密码</string>
    <string name="input_username">请输入手机号/邮箱</string>
    <string name="input_password">请输入密码</string>
    <string name="send_agin">重新发送</string>
    <string name="next">下一步</string>

    <string name="sendcode">验证码</string>
    <string name="input_sendcode">请输入验证码</string>
    <string name="title_name">Title_CN</string>
    <string name="ShopNumber">CN_ShopNumber</string>


</resources>
