<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e0e0e0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:orientation="horizontal"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:layout_width="160px"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/addressee"
            android:textColor="#151515"
            android:textSize="28px" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_addressee"
            android:textColor="#151515"
            android:textSize="28px" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e0e0e0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:orientation="horizontal"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:layout_width="160px"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/phone"
            android:textColor="#151515"
            android:textSize="28px" />

        <EditText
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_phone"
            android:textColor="#151515"
            android:textSize="28px" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e0e0e0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:orientation="horizontal"
        android:paddingLeft="30px">

        <TextView
            android:layout_width="160px"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/location"
            android:textColor="#151515"
            android:textSize="28px" />

        <EditText
            android:id="@+id/et3"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="false"
            android:gravity="center_vertical"
            android:hint="@string/choose_shencity"
            android:textColor="#151515"
            android:textSize="28px" />

        <RelativeLayout
            android:layout_width="1px"
            android:layout_height="60px"
            android:layout_gravity="center_vertical"
            android:background="#e0e0e0" />

        <RelativeLayout
            android:id="@+id/tomap_choose"
            android:layout_width="105px"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="45px"
                android:layout_height="45px"
                android:layout_centerInParent="true"
                android:src="@mipmap/location" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e0e0e0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170px"
        android:orientation="horizontal"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:layout_width="160px"
            android:layout_height="match_parent"
            android:paddingTop="30px"
            android:text="@string/address"
            android:textColor="#151515"
            android:textSize="28px" />

        <EditText
            android:id="@+id/et4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_address"
            android:textColor="#151515"
            android:textSize="28px" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e0e0e0" />

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:padding="30px">

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="40px"
            android:layout_height="40px"
            android:src="@drawable/choose_no_tc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40px"
            android:layout_marginLeft="15px"
            android:layout_toRightOf="@+id/iv1"
            android:gravity="center_vertical"
            android:text="@string/isdefult_address"
            android:textColor="#151515"
            android:textSize="28px" />

    </RelativeLayout>


</LinearLayout>