<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_title" />

    <RadioGroup
        android:id="@+id/rblayout"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/will_pay"
            android:textColor="@color/color_radiobutton" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/making"
            android:textColor="@color/color_radiobutton" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/will_comment"
            android:textColor="@color/color_radiobutton" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#f3f3f3" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>