<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logobg"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="80px"
            android:layout_height="80px">

            <ImageView
                android:layout_width="21px"
                android:layout_height="37px"
                android:layout_centerInParent="true"
                android:src="@mipmap/back_white" />
        </RelativeLayout>


        <TextView
            android:layout_width="520px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300px"
            android:text="@string/username"
            android:textColor="#ffffff"
            android:textSize="28px" />

        <EditText
            android:id="@+id/et1"
            android:layout_width="520px"
            android:layout_height="60px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20px"
            android:background="@null"
            android:hint="@string/input_username"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="28px" />

        <RelativeLayout
            android:layout_width="520px"
            android:layout_gravity="center_horizontal"
            android:layout_height="1px"
            android:background="#ffffff" />

        <TextView
            android:layout_width="520px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100px"
            android:text="@string/password"
            android:textColor="#ffffff"
            android:textSize="28px" />

        <LinearLayout
            android:layout_width="520px"
            android:layout_height="60px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20px"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et2"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="28px" />

            <RelativeLayout
                android:id="@+id/layoutiv"
                android:layout_width="60px"
                android:layout_height="60px">

                <ImageView
                    android:id="@+id/iv"
                    android:layout_width="26px"
                    android:layout_height="18px"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/psw_see" />
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="520px"
            android:layout_height="1px"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/btn"
            android:layout_width="520px"
            android:layout_height="90px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="170px"
            android:background="@drawable/border_1_0_white"
            android:gravity="center"
            android:text="@string/logo"
            android:textColor="#ffffff"
            android:textSize="30px" />
    </LinearLayout>

</LinearLayout>