<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/zhuchebg">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="80px"
            android:layout_height="80px">

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="21px"
                android:layout_height="37px"
                android:layout_centerInParent="true"
                android:src="@mipmap/back_white" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/layout_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="410px"
            android:orientation="vertical">

            <TextView
                android:layout_width="520px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sendcode"
                android:textColor="#ffffff"
                android:textSize="28px" />

            <LinearLayout
                android:layout_width="520px"
                android:layout_height="60px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70px"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_send"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_sendcode"
                    android:inputType="number"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="28px" />

                <TextView
                    android:id="@+id/btn_send"
                    android:layout_width="128px"
                    android:layout_height="50px"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/border_1_0_white"
                    android:gravity="center"
                    android:text="@string/send_agin"
                    android:textColor="#ffffff"
                    android:textSize="28px"></TextView>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="300px"
                android:layout_height="1px"
                android:layout_marginLeft="120px"
                android:background="#ffffff"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="520px"
            android:layout_height="1px"
            android:background="#ffffff" />

        <LinearLayout
            android:id="@+id/layout_psw"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_marginTop="630px"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="520px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/password"
                android:textColor="#ffffff"
                android:textSize="28px" />

            <LinearLayout
                android:layout_width="520px"
                android:layout_height="60px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20px"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_psw"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="28px" />

                <RelativeLayout
                    android:id="@+id/layoutiv"
                    android:layout_width="60px"
                    android:layout_height="60px">

                    <ImageView
                        android:id="@+id/iv"
                        android:layout_width="26px"
                        android:layout_height="18px"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/psw_see" />
                </RelativeLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="520px"
                android:layout_height="1px"
                android:background="#fff"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_username"
            android:layout_width="match_parent"
            android:layout_marginTop="630px"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="520px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/username"
                android:textColor="#ffffff"
                android:textSize="28px" />

            <LinearLayout
                android:layout_width="520px"
                android:layout_height="60px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20px"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_username"
                    android:inputType="text"
                    android:textColor="#ffffff"
                    android:textColorHint="#ffffff"
                    android:textSize="28px" />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="520px"
                android:layout_height="1px"
                android:background="#fff"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>



        <TextView
            android:id="@+id/btn"
            android:layout_width="520px"
            android:layout_height="90px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="930px"
            android:background="@drawable/border_1_0_white"
            android:gravity="center"
            android:text="@string/logo"
            android:textColor="#ffffff"
            android:textSize="30px" />
    </RelativeLayout>

</LinearLayout>