<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/logobg">
        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="80px"
            android:layout_height="80px">
        <ImageView
            android:layout_width="36px"
            android:layout_height="36px"
            android:src="@mipmap/close"
            android:layout_centerInParent="true"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="160px"
            android:layout_height="90px">
            <TextView
                android:id="@+id/logo"
                android:background="@drawable/border_1_0_white"
                android:text="@string/logo"
                android:textColor="#ffffff"
                android:textSize="30px"
                android:layout_width="280px"
                android:gravity="center"
                android:layout_height="90px" />
            <RelativeLayout
                android:layout_width="90px"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/zhuche"
                android:background="@drawable/border_1_0_white"
                android:text="@string/zhuche"
                android:textColor="#ffffff"
                android:textSize="30px"
                android:gravity="center"
                android:layout_width="280px"
                android:layout_height="90px" />
        </LinearLayout>
        <TextView
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="28px"
            android:layout_marginBottom="100px"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout"/>

    </RelativeLayout>

</LinearLayout>